// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea Component handles input and triggers events 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-hwnj0i-MuiStack-root"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
    >
      <textarea
        aria-label="test"
        class="css-bmb4ke"
        data-testid="text-area-component"
        id="test"
        placeholder="Please Input"
        rows="1"
        style="height: 0px; overflow: hidden;"
      />
      <textarea
        aria-hidden="true"
        class="css-bmb4ke"
        readonly=""
        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Component render with error 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-5u2gm5-MuiStack-root"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
    >
      <textarea
        aria-label="test"
        class="css-1egmxn1"
        data-testid="text-area-component"
        id="test"
        placeholder="Please Input"
        rows="1"
        style="height: 0px; overflow: hidden;"
      />
      <textarea
        aria-hidden="true"
        class="css-1egmxn1"
        readonly=""
        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea Component renders without errors 1`] = `
<DocumentFragment>
  <div
    class="MuiStack-root css-hwnj0i-MuiStack-root"
  >
    <div
      class="MuiFormControl-root MuiFormControl-fullWidth css-q8hpuo-MuiFormControl-root"
    >
      <p
        class="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
      >
        Text Area Label
      </p>
      <textarea
        aria-label="test"
        class="css-bmb4ke"
        data-testid="text-area-component"
        id="test"
        placeholder="Please Input"
        rows="1"
        style="height: 0px; overflow: hidden;"
      />
      <textarea
        aria-hidden="true"
        class="css-bmb4ke"
        readonly=""
        style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding-top: 0px; padding-bottom: 0px; width: 100%;"
        tabindex="-1"
      />
    </div>
  </div>
</DocumentFragment>
`;
